omni/tests/goldens/types/unknown_type_17.omni
let value17:Mystery17 = 1
